# flask-compress

./: pyproject.toml
